--- a/task.html
+++ b/task.html
@@ -1293,6 +1293,195 @@
                         </span>
                       </div>
                     </div>
+                    <div class="card__boxes--box">
+                      <div class="card__boxes--box__header">
+                        <div class="card__boxes--box__header--title">
+                          <span class="material-symbols-outlined"> people </span>
+                          <span>קשרים</span>
+                        </div>
+                        <div class="card__boxes--box__header--btns">
+                          <div class="dynamic-btns">
+                            <span class="material-symbols-outlined btn-default">
+                              add
+                            </span>
+                            <span class="material-symbols-outlined btn-default close-expand-new">
+                              close
+                            </span>
+                            <span class="material-symbols-outlined btn-default expend-btn">
+                              arrows_more_up
+                            </span>
+                            <span class="material-symbols-outlined btn-default minimize" data-target="box4">
+                              arrows_more_down
+                            </span>
+                          </div>
+                          <span class="material-symbols-outlined btn-default more-vert">
+                            more_vert
+                            <div class="local-menu-more-vert icons-menu active">
+                              <div class="local-menu-more-vert__item only-icons">
+                                <span class="material-symbols-outlined showSingle btn-default">
+                                  top_panel_open
+                                </span>
+                                <span class="material-symbols-outlined btn-defadivt">search</span>
+                                <span class="material-symbols-outlined btn-default">filter_alt</span>
+                                <span class="material-symbols-outlined btn-default">cached</span>
+                                <span class="material-symbols-outlined btn-default">print</span>
+                                <span class="material-symbols-outlined btn-default">push_pin</span>
+                                <span class="material-symbols-outlined btn-default">content_copy</span>
+                                <span class="material-symbols-outlined btn-default">exit_to_app</span>
+                                <span class="material-symbols-outlined btn-default">done</span>
+                                <span class="material-symbols-outlined btn-default">delete</span>
+                                <span class="material-symbols-outlined btn-default">
+                                  close
+                                </span>
+                              </div>
+                            </div>
+                            <div class="local-menu-more-vert push-pin-menu active">
+                              <div class="local-menu-more-vert__item">
+                                <div class="title">ברירת מחדל לתצוגה:</div>
+                                <div>
+                                  <span class="material-symbols-outlined check-box-checked">
+                                    done
+                                  </span>
+                                  <span class="material-symbols-outlined icon-disabled">
+                                    crop_16_9
+                                  </span>
+                                  <span>מצומצמת</span>
+                                </div>
+                                <div>
+                                  <span class="material-symbols-outlined check-box-checked">
+                                    check_box_outline_blank
+                                  </span>
+                                  <span class="material-symbols-outlined icon-disabled">
+                                    web_asset
+                                  </span>
+                                  <span>מורחבת</span>
+                                </div>
+                                <div>
+                                  <span class="material-symbols-outlined check-box-blank">
+                                    check_box_outline_blank
+                                  </span>
+                                  <span class="material-symbols-outlined icon-disabled">
+                                    top_panel_open
+                                  </span>
+                                  <span>פתוחה למטה</span>
+                                </div>
+                                <div>
+                                  <span class="material-symbols-outlined check-box-blank">
+                                    check_box_outline_blank
+                                  </span>
+                                  <span class="material-symbols-outlined icon-disabled">
+                                    arrows_more_down
+                                  </span>
+                                  <span>מוקטנת</span>
+                                </div>
+                                <div>
+                                  <span class="material-symbols-outlined check-box-blank">
+                                    check_box_outline_blank
+                                  </span>
+                                  <span class="material-symbols-outlined icon-disabled">
+                                    visibility_off
+                                  </span>
+                                  <span>מוסתרת</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="local-menu-more-vert push-pin-menu active">
+                              <div class="local-menu-more-vert__item">
+                                <div class="title">מחק:</div>
+                                <div>
+                                  <span>מסומנים</span>
+                                </div>
+                                <div>
+                                  <span>מוצגים</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="local-menu-more-vert push-pin-menu active">
+                              <div class="local-menu-more-vert__item">
+                                <div class="title">סימון:</div>
+                                <div>
+                                  <span>בטל את כל המסומנים</span>
+                                </div>
+                                <div>
+                                  <span>סמן הכול</span>
+                                </div>
+                                <div>
+                                  <span>הפוך בחירה</span>
+                                </div>
+                              </div>
+                            </div>
+                          </span>
+                        </div>
+                      </div>
+
+                      <div class="card__boxes--box__content zero-extend">
+                        <div class="card__boxes--box__content--fields">
+                          <span class="edit-content small">
+                            <span class="label">
+                              <div class="icon-container not-in-table">
+                                <span class="material-symbols-outlined bigger-icon">person</span>
+                                <span class="material-symbols-outlined smaller-icon green">add</span>
+                              </div>
+                              <div>
+                                <span class="material-symbols-outlined arrow-small-padding">arrow_drop_down</span>
+                              </div>
+                            </span>
+                            <span class="edit-field">
+                              <span class="material-symbols-outlined">
+                                keyboard_keys
+                              </span>
+                              <input type="text" placeholder="" id="click-open-second-level-menu">
+                              <span class="material-symbols-outlined">
+                                expand_more
+                              </span>
+                            </span>
+                            <div class="edit-content-menu active" id="menu-second-level">
+                              <div class="edit-content-menu__header">
+                                <div class="edit-content-menu__header--right">
+                                  <div class="edit-content-menu__category clicked">הכל</div>
+                                  <div class="edit-content-menu__category">עובדים</div>
+                                  <div class="edit-content-menu__category">קשורים</div>
+                                </div>
+                                <div class="edit-content-menu__header--left">
+                                  <span class="material-symbols-outlined btn-default">
+                                    arrow_forward_ios
+                                  </span>
+                                  <span class="material-symbols-outlined btn-default">
+                                    arrow_back_ios
+                                  </span>
+                                  <span class="material-symbols-outlined btn-default">close</span>
+                                </div>
+                              </div>
+                              <div class="edit-content-menu__all">
+                                <div>
+                                  <span>נועם כהן</span>
+                                  <span>האגודה לקידום פיתוחי קוואנטום בחינוך יסודי</span>
+                                </div>
+                                <div>
+                                  <span>אורי מזרחי</span>
+                                  <span>עמותת תמיכה בזכויות היתושים</span>
+                                </div>
+                                <div>
+                                  <span>מאיה לוי</span>
+                                  <span>האגודה לקידום פיתוחי קוואנטום בחינוך יסודי</span>
+                                </div>
+                                <div>
+                                  <span>יעל פרץ</span>
+                                  <span>הקרן העולמית להגנה על חדי קרן</span>
+                                </div>
+                              </div>
+                              <div class="edit-content-menu__create">
+                                <div>צור חדש:</div>
+                                <span class="small-chip green" id="click-open-second-level-card">איש</span>
+                                <span class="small-chip green">ארגון
+                                </span>
+                              </div>
+                            </div>
+                          </span>
+                        </div>
+
+                      </div>
+                    </div>
                     <div class="card__boxes--box__content active first-extend">
                       <div class="card__boxes--box__content--table">
                         <div class="table-flex-container">
@@ -2327,6 +2516,140 @@
                   </div>
 
                 </div>
+              </div>
+              <div class="card active" id="second-level-card">
+                <div class="card__navigate">
+                  <h4>הוספת קשר (יצירת קשר...)</h4>
+                  <span class="material-symbols-outlined">
+                    chevron_left
+                  </span>
+                  <h4>יצירת קשר (אייל כהן)</h4>
+                  <span class="material-symbols-outlined">
+                    chevron_left
+                  </span>
+                  <h4>הוספת קשר</h4>
+                </div>
+                <div class="card-header long-header">
+                  <div class="top">
+                    <div class="left">
+                      <div class="title">
+                        <span class="round-img-container">
+                          <img src="./up/imgs/person.webp" alt="">
+                        </span>
+                        <span>
+                          <input class="edit-name" type="text" placeholder="הקלד שם..." value="מאיה לוי">
+                        </span>
+                      </div>
+                      <div class="title-right">
+                        <div class="tags">
+                          <div class="small-chip neutral">
+                            <span class="material-symbols-outlined btn-default"> add </span>
+                            <span>תגית</span>
+                          </div>
+                          <div>
+                            <span class="material-symbols-outlined btn-default">
+                              more_vert
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="right">
+                      <span class="material-symbols-outlined btn-default">
+                        web_asset
+                      </span>
+                      <div class="icon-container not-in-table">
+                        <span class="material-symbols-outlined bigger-icon">mail</span>
+                        <span class="material-symbols-outlined smaller-icon green">add</span>
+                      </div>
+                      <span class="material-symbols-outlined btn-default">
+                        more_vert
+                      </span>
+                      <span class="material-symbols-outlined btn-default">
+                        close
+                      </span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card__boxes new-class">
+                  <!-- תקשורת -->
+                  <div class="card__boxes--box box-reduced">
+                    <div class="card__boxes--box__header">
+                      <div class="card__boxes--box__header--title">
+                        <span class="material-symbols-outlined"> phone </span>
+                        <span>תקשורת</span>
+                      </div>
+                      <div class="card__boxes--box__header--btns">
+                        <div class="dynamic-btns">
+                          <span class="material-symbols-outlined btn-default expand-grid-button">
+                            add
+                          </span>
+                          <span class="material-symbols-outlined btn-default close-expand-new">
+                            close
+                          </span>
+                          <span class="material-symbols-outlined btn-default expend-btn">
+                            arrows_more_up
+                          </span>
+                          <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
+                            top_panel_open
+                          </span>
+                          <span class="material-symbols-outlined btn-default minimize">
+                            arrows_more_down
+                          </span>
+                        </div>
+                        <span class="material-symbols-outlined btn-default">
+                          more_vert
+                        </span>
+                      </div>
+                    </div>
+                    <div class="card__boxes--box__content zero-extend">
+                      <div class="card__boxes--box__content--fields">
+                        <span class="edit-content">
+                          <span class="label">
+                            <span>טלפון</span>
+                          </span>
+                          <span class="edit-field">
+                            <span>הקלד...</span>
+                            <span class="material-symbols-outlined">
+                              expand_more
+                            </span>
+                          </span>
+                        </span>
+                        <span class="edit-content">
+                          <span class="edit-field">
+                            <span>פרטי</span>
+                            <span class="material-symbols-outlined">
+                              expand_more
+                            </span>
+                          </span>
+                        </span>
+                        <span class="material-symbols-outlined stop-icon"> stop </span>
+                        <span class="edit-content">
+                          <span class="label">
+                            <span>מייל</span>
+                          </span>
+                          <span class="edit-field">
+                            <span>הקלד...</span>
+                            <span class="material-symbols-outlined">
+                              expand_more
+                            </span>
+                          </span>
+                        </span>
+                        <span class="edit-content">
+                          <span class="edit-field">
+                            <span>עבודה</span>
+                            <span class="material-symbols-outlined">
+                              expand_more
+                            </span>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
