--- a/task.html
+++ b/task.html
@@ -2650,6 +2650,27 @@
                   </div>
                 </div>
 
+                <div class="small-boxes-container-second">
+                  <div class="small-box-second pop-in">
+                    <span class="material-symbols-outlined">
+                      home
+                    </span>
+                    <span>כתובות</span>
+                    <span class="material-symbols-outlined btn-default dynamic-btns">
+                      more_vert
+                    </span>
+                  </div>
+                  <div class="small-box-second pop-in">
+                    <span class="material-symbols-outlined">
+                      info
+                    </span>
+                    <span>מידע נוסף</span>
+                    <span class="material-symbols-outlined btn-default dynamic-btns">
+                      more_vert
+                    </span>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
