--- a/person.html
+++ b/person.html
@@ -1980,98 +1980,106 @@
                         close
                     </span>
                 </div>
-                <div class="small-boxes-container-second">
-                    <div class="small-box-second active" data-target="box1">
-                        <span class="material-symbols-outlined">
-                            link
-                        </span>
-                        <span>קשרים</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns" id="btn-animation">
-                            more_vert
-                        </span>
+                <div class="container-new-small-boxes-second">
+                    <div class="small-boxes-container-second">
+                        <div class="small-box-second active" data-target="box1">
+                            <span class="material-symbols-outlined">
+                                link
+                            </span>
+                            <span>קשרים</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns" id="btn-animation">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box2">
+                            <span class="material-symbols-outlined">
+                                call
+                            </span>
+                            <span>תקשורת</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box3">
+                            <span class="material-symbols-outlined">
+                                home
+                            </span>
+                            <span>כתובות</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box4">
+                            <span class="material-symbols-outlined">
+                                info
+                            </span>
+                            <span>מידע נוסף</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box5">
+                            <span class="material-symbols-outlined">
+                                moving
+                            </span>
+                            <span>שלבים</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box6">
+                            <span class="material-symbols-outlined">
+                                shopping_bag
+                            </span>
+                            <span>מוצרים שנרכשו</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box7">
+                            <span class="material-symbols-outlined">
+                                description
+                            </span>
+                            <span>מסמכים לגבייה</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box8">
+                            <span class="material-symbols-outlined">
+                                description
+                            </span>
+                            <span>דוח גיול</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box9">
+                            <span class="material-symbols-outlined">
+                                account_box
+                            </span>
+                            <span>חשבונות</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+                        <div class="small-box-second active" data-target="box10">
+                            <span class="material-symbols-outlined">
+                                category
+                            </span>
+                            <span>פעולות</span>
+                            <span class="material-symbols-outlined btn-default dynamic-btns">
+                                more_vert
+                            </span>
+                        </div>
+
                     </div>
-                    <div class="small-box-second active" data-target="box2">
-                        <span class="material-symbols-outlined">
-                            call
-                        </span>
-                        <span>תקשורת</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box3">
-                        <span class="material-symbols-outlined">
-                            home
-                        </span>
-                        <span>כתובות</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box4">
-                        <span class="material-symbols-outlined">
-                            info
-                        </span>
-                        <span>מידע נוסף</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box5">
-                        <span class="material-symbols-outlined">
-                            moving
-                        </span>
-                        <span>שלבים</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box6">
-                        <span class="material-symbols-outlined">
-                            shopping_bag
-                        </span>
-                        <span>מוצרים שנרכשו</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box7">
-                        <span class="material-symbols-outlined">
-                            description
-                        </span>
-                        <span>מסמכים לגבייה</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box8">
-                        <span class="material-symbols-outlined">
-                            description
-                        </span>
-                        <span>דוח גיול</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box9">
-                        <span class="material-symbols-outlined">
-                            account_box
-                        </span>
-                        <span>חשבונות</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
-                    <div class="small-box-second active" data-target="box10">
-                        <span class="material-symbols-outlined">
-                            category
-                        </span>
-                        <span>פעולות</span>
-                        <span class="material-symbols-outlined btn-default dynamic-btns">
-                            more_vert
-                        </span>
-                    </div>
+                    <span class="material-symbols-outlined hide-single round-btn round-close-btn close-second-extend">
+                        expand_content
+                    </span>
                 </div>
+
+
                 <div class="card__boxes full-boxes">
                     <!-- קשרים -->
                     <div class="card__boxes--box full-box" data-target="box1">
