--- a/person.html
+++ b/person.html
@@ -2074,7 +2074,8 @@
                         </div>
 
                     </div>
-                    <span class="material-symbols-outlined hide-single round-btn round-close-btn close-second-extend">
+                    <span class="material-symbols-outlined hide-single round-btn round-close-btn close-second-extend"
+                        id="extend-btn-for-second-new">
                         expand_content
                     </span>
                 </div>
