--- a/kanban.html
+++ b/kanban.html
@@ -247,7 +247,7 @@
             </div>
             <div class="kanban-header hidden-header green-header">
               <span></span>
-              <div class="status-container">
+              <div class="status-container green">
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">פתוח</span>
               </div>
@@ -309,7 +309,7 @@
           <div class="kanban">
             <div class="kanban-header hidden-header yellow-header">
               <span></span>
-              <div class="status-container">
+              <div class="status-container yellow">
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">ביצוע</span>
               </div>
@@ -334,7 +334,7 @@
           <div class="kanban">
             <div class="kanban-header hidden-header purple-header">
               <span></span>
-              <div class="status-container">
+              <div class="status-container purple">
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">סגור</span>
               </div>
