--- a/kanban.html
+++ b/kanban.html
@@ -251,7 +251,7 @@
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">פתוח</span>
               </div>
-              <span class="material-symbols-outlined close-icon" id="menu-icon">close</span>
+              <span class="material-symbols-outlined close-icon btn-default" id="menu-icon">close</span>
             </div>
             <div class="kanban-content-container" id="open">
               <div class="kanban-content" id="column-potential">
@@ -313,7 +313,7 @@
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">ביצוע</span>
               </div>
-              <span class="material-symbols-outlined close-icon">close</span>
+              <span class="material-symbols-outlined close-icon btn-default">close</span>
             </div>
             <div class="kanban-content-container" id="ongoing">
               <div class="kanban-content" id="column-win">
@@ -338,7 +338,7 @@
                 <span class="material-symbols-outlined fill-icon">circle</span>
                 <span class="status">סגור</span>
               </div>
-              <span class="material-symbols-outlined close-icon">close</span>
+              <span class="material-symbols-outlined close-icon btn-default">close</span>
             </div>
             <div class="kanban-content-container" id="close">
               <div class="kanban-content" id="column-done">
