--- a/kanban.html
+++ b/kanban.html
@@ -236,7 +236,7 @@
     <section class="card-container">
       <div class="card">
         <div class="kanban-container">
-          <div class="kanban">
+          <div class="kanban green">
             <div class="kanban-header small-screen-header">
               <span></span>
               <div class="status-container">
@@ -306,7 +306,7 @@
               </div>
             </div>
           </div>
-          <div class="kanban">
+          <div class="kanban yellow">
             <div class="kanban-header hidden-header yellow-header">
               <span></span>
               <div class="status-container yellow">
@@ -331,7 +331,7 @@
               </div>
             </div>
           </div>
-          <div class="kanban">
+          <div class="kanban purple">
             <div class="kanban-header hidden-header purple-header">
               <span></span>
               <div class="status-container purple">
