--- a/kanban.html
+++ b/kanban.html
@@ -256,10 +256,9 @@
             <div class="kanban-content-container" id="open">
               <div class="kanban-content" id="column-potential">
                 <div class="kanban-title">מתוכנן</div>
-                <div class="kanban-note">
+                <div class="kanban-note pink-border">
                   <div class="kanban-note-header">
                     <div>
-                      <span class="material-symbols-outlined fill-icon status-icon blue">radio_button_unchecked</span>
                       <span>משימה</span>
                     </div>
                     <span>12-01-24</span>
@@ -275,11 +274,14 @@
                     <span>210,000$</span>
                     <span>משה, דוד, שלמה</span>
                   </div>
+                  <div class="kanban-icons">
+                    <span class="material-symbols-outlined btn-default">palette</span>
+                  </div>
                 </div>
-                <div class="kanban-note">
+                <div class="kanban-note yellow-border">
                   <div class="kanban-note-header">
                     <div>
-                      <span class="material-symbols-outlined fill-icon status-icon blue">radio_button_unchecked</span>
+                      <!-- <span class="material-symbols-outlined fill-icon status-icon blue">radio_button_unchecked</span> -->
                       <span>משימה</span>
                     </div>
                     <span>12-01-24</span>
@@ -318,7 +320,25 @@
             <div class="kanban-content-container" id="ongoing">
               <div class="kanban-content" id="column-win">
                 <div class="kanban-title">זכיה</div>
-                <div class="kanban-note">Task 6</div>
+                <div class="kanban-note blue-border">
+                  <div class="kanban-note-header">
+                    <div>
+                      <span>משימה</span>
+                    </div>
+                    <span>12-01-24</span>
+                  </div>
+                  <div class="kanban-note-title">
+                    עדכון שדה "מקור משני" ב"כרטסת לקוחות"
+                  </div>
+                  <p class="kanban-note-para">
+                    בזמן תהליך הכנסת הלידים. השדה יההי מעודכן בהתאם לליד
+                    האחרון שהתקבל עבור אותו לקוח.
+                  </p>
+                  <div class="kanban-note-header">
+                    <span>210,000$</span>
+                    <span>משה, דוד, שלמה</span>
+                  </div>
+                </div>
               </div>
               <div class="kanban-content" id="column-inprogress">
                 <div class="kanban-title">בעבודה</div>
