--- a/task.html
+++ b/task.html
@@ -1128,6 +1128,8 @@
                         <div class="edit-content-menu__category clicked">הכל</div>
                         <div class="edit-content-menu__category">עובדים</div>
                         <div class="edit-content-menu__category">קשורים</div>
+                        <div class="edit-content-menu__category">קטגוריה שהיא ארוכה</div>
+
                       </div>
                       <div class="edit-content-menu__header--left">
                         <span class="material-symbols-outlined btn-default">
