--- a/kanban.html
+++ b/kanban.html
@@ -275,7 +275,15 @@
                     <span>משה, דוד, שלמה</span>
                   </div>
                   <div class="kanban-icons">
-                    <span class="material-symbols-outlined btn-default">palette</span>
+                    <span class="material-symbols-outlined btn-default change-color"
+                      data-toggle="color-menu">palette</span>
+                    <div class="color-menu active">
+                      <span class="color-option pink-border" data-color="pink"></span>
+                      <span class="color-option blue-border" data-color="blue"></span>
+                      <span class="color-option yellow-border" data-color="yellow"></span>
+                      <span class="color-option green-border" data-color="green"></span>
+
+                    </div>
                   </div>
                 </div>
                 <div class="kanban-note yellow-border">
