--- a/task.html
+++ b/task.html
@@ -1127,8 +1127,10 @@
                       <div class="edit-content-menu__header--right">
                         <div class="edit-content-menu__category clicked">הכל</div>
                         <div class="edit-content-menu__category">עובדים</div>
-                        <div class="edit-content-menu__category">קשורים</div>
+                        <div class="edit-content-menu__category">קשרים</div>
                         <div class="edit-content-menu__category">קטגוריה שהיא ארוכה</div>
+                        <div class="edit-content-menu__category">עובדים</div>
+                        <div class="edit-content-menu__category">קטגוריה</div>
                       </div>
                       <div class="edit-content-menu__header--left">
                         <span class="material-symbols-outlined btn-default">
