--- a/kanban.html
+++ b/kanban.html
@@ -263,6 +263,7 @@
                     </div>
                     <span>12-01-24</span>
                   </div>
+                  <div class="line pink-border"></div>
                   <div class="kanban-note-title">
                     עדכון שדה "מקור משני" ב"כרטסת לקוחות"
                   </div>
@@ -293,6 +294,7 @@
                     </div>
                     <span>12-01-24</span>
                   </div>
+                  <div class="line yellow-border"></div>
                   <div class="kanban-note-title">שדרוג גולדפלוס</div>
                   <p class="kanban-note-para">
                     שדרוג האפליקציה ומסד הנתונים לגרסה מתקדמת מ-2008. ידרוש
@@ -334,6 +336,7 @@
                     </div>
                     <span>12-01-24</span>
                   </div>
+                  <div class="line blue-border"></div>
                   <div class="kanban-note-title">
                     עדכון שדה "מקור משני" ב"כרטסת לקוחות"
                   </div>
