--- a/task.html
+++ b/task.html
@@ -1134,14 +1134,17 @@
                         <span class="material-symbols-outlined btn-default">close</span>
                       </div>
                       <div class="edit-content-menu__header--right">
-                        <div class="edit-content-menu__category clicked">הכל</div>
-                        <div class="edit-content-menu__category">עובדים</div>
-                        <div class="edit-content-menu__category">קשרים</div>
-                        <div class="edit-content-menu__category">קטגוריה שהיא ארוכה</div>
-                        <div class="edit-content-menu__category">עובדים</div>
-                        <div class="edit-content-menu__category">קטגוריה</div>
-                        <div class="edit-content-menu__category">קטגוריה</div>
-
+                        <div class="list">
+                          <div class="edit-content-menu__category clicked">הכל</div>
+                          <div class="edit-content-menu__category">עובדים</div>
+                          <div class="edit-content-menu__category">קשרים</div>
+                          <div class="edit-content-menu__category">קטגוריה שהיא ארוכה</div>
+                          <div class="edit-content-menu__category">עובדים</div>
+                          <div class="edit-content-menu__category">קטגוריה</div>
+                        </div>
+                        <span class="material-symbols-outlined btn-default expand-btn">
+                          expand_content
+                        </span>
                       </div>
 
                     </div>
