--- a/task.html
+++ b/task.html
@@ -1446,11 +1446,6 @@
                             </span>
                             <div class="edit-content-menu active" id="menu-second-level">
                               <div class="edit-content-menu__header">
-                                <div class="edit-content-menu__header--right">
-                                  <div class="edit-content-menu__category clicked">הכל</div>
-                                  <div class="edit-content-menu__category">עובדים</div>
-                                  <div class="edit-content-menu__category">קשורים</div>
-                                </div>
                                 <div class="edit-content-menu__header--left">
                                   <span class="material-symbols-outlined btn-default">
                                     arrow_forward_ios
@@ -1460,6 +1455,18 @@
                                   </span>
                                   <span class="material-symbols-outlined btn-default">close</span>
                                 </div>
+                                <div class="edit-content-menu__header--right">
+                                  <div class="list">
+                                    <div class="edit-content-menu__category clicked">הכל</div>
+                                    <div class="edit-content-menu__category">עובדים</div>
+                                    <div class="edit-content-menu__category">קשרים</div>
+                                    <div class="edit-content-menu__category" title="קטגוריה שהיא ארוכה">קטגוריה...</div>
+                                  </div>
+                                  <span class="material-symbols-outlined btn-default expand-btn">
+                                    expand_content
+                                  </span>
+                                </div>
+
                               </div>
                               <div class="edit-content-menu__all">
                                 <div>
