--- a/kanban.html
+++ b/kanban.html
@@ -261,7 +261,7 @@
                     <div>
                       <span>משימה</span>
                     </div>
-                    <span>12-01-24</span>
+                    <span class="note-date">12-01-24</span>
                   </div>
                   <div class="line pink-border"></div>
                   <div class="kanban-note-title">
@@ -278,11 +278,16 @@
                   <div class="kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color"
                       data-toggle="color-menu">palette</span>
+
                     <div class="color-menu active">
                       <span class="color-option pink-border" data-color="pink"></span>
                       <span class="color-option blue-border" data-color="blue"></span>
                       <span class="color-option yellow-border" data-color="yellow"></span>
                       <span class="color-option green-border" data-color="green"></span>
+                    </div>
+                    <div class="small-chip neutral">
+                      <span class="material-symbols-outlined btn-default"> add </span>
+                      <span>תגית</span>
                     </div>
                   </div>
                 </div>
@@ -292,7 +297,7 @@
                       <!-- <span class="material-symbols-outlined fill-icon status-icon blue">radio_button_unchecked</span> -->
                       <span>משימה</span>
                     </div>
-                    <span>12-01-24</span>
+                    <span class="note-date">12-01-24</span>
                   </div>
                   <div class="line yellow-border"></div>
                   <div class="kanban-note-title">שדרוג גולדפלוס</div>
@@ -334,7 +339,7 @@
                     <div>
                       <span>משימה</span>
                     </div>
-                    <span>12-01-24</span>
+                    <span class="note-date">12-01-24</span>
                   </div>
                   <div class="line blue-border"></div>
                   <div class="kanban-note-title">
