--- a/kanban.html
+++ b/kanban.html
@@ -309,7 +309,24 @@
                     <span>210,000$</span>
                     <span>מיטב בית השקעות בע"מ, סילבינה בצלאל</span>
                   </div>
+
+                  <div class="kanban-icons">
+                    <span class="material-symbols-outlined btn-default change-color"
+                      data-toggle="color-menu">palette</span>
+
+                    <div class="color-menu active">
+                      <span class="color-option pink-border" data-color="pink"></span>
+                      <span class="color-option blue-border" data-color="blue"></span>
+                      <span class="color-option yellow-border" data-color="yellow"></span>
+                      <span class="color-option green-border" data-color="green"></span>
+                    </div>
+                    <div class="small-chip neutral">
+                      <span class="material-symbols-outlined btn-default"> add </span>
+                      <span>תגית</span>
+                    </div>
+                  </div>
                 </div>
+
               </div>
               <div class="kanban-content" id="column-proposal">
                 <div class="kanban-title">הצעה</div>
