--- a/kanban.html
+++ b/kanban.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- calendar -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <!-- Google Icons -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -369,6 +372,21 @@
                   <div class="kanban-note-header">
                     <span>210,000$</span>
                     <span>משה, דוד, שלמה</span>
+                  </div>
+                  <div class="kanban-icons">
+                    <span class="material-symbols-outlined btn-default change-color"
+                      data-toggle="color-menu">palette</span>
+
+                    <div class="color-menu active">
+                      <span class="color-option pink-border" data-color="pink"></span>
+                      <span class="color-option blue-border" data-color="blue"></span>
+                      <span class="color-option yellow-border" data-color="yellow"></span>
+                      <span class="color-option green-border" data-color="green"></span>
+                    </div>
+                    <div class="small-chip neutral">
+                      <span class="material-symbols-outlined btn-default"> add </span>
+                      <span>תגית</span>
+                    </div>
                   </div>
                 </div>
               </div>
