--- a/kanban.html
+++ b/kanban.html
@@ -288,10 +288,8 @@
                       <span class="color-option yellow-border" data-color="yellow"></span>
                       <span class="color-option green-border" data-color="green"></span>
                     </div>
-                    <div class="small-chip neutral">
-                      <span class="material-symbols-outlined btn-default"> add </span>
-                      <span>תגית</span>
-                    </div>
+
+                    <span class="material-symbols-outlined btn-default">person_add</span>
                   </div>
                 </div>
                 <div class="kanban-note yellow-border">
@@ -323,10 +321,8 @@
                       <span class="color-option yellow-border" data-color="yellow"></span>
                       <span class="color-option green-border" data-color="green"></span>
                     </div>
-                    <div class="small-chip neutral">
-                      <span class="material-symbols-outlined btn-default"> add </span>
-                      <span>תגית</span>
-                    </div>
+
+                    <span class="material-symbols-outlined btn-default">person_add</span>
                   </div>
                 </div>
 
@@ -383,10 +379,8 @@
                       <span class="color-option yellow-border" data-color="yellow"></span>
                       <span class="color-option green-border" data-color="green"></span>
                     </div>
-                    <div class="small-chip neutral">
-                      <span class="material-symbols-outlined btn-default"> add </span>
-                      <span>תגית</span>
-                    </div>
+
+                    <span class="material-symbols-outlined btn-default">person_add</span>
                   </div>
                 </div>
               </div>
