--- a/task.html
+++ b/task.html
@@ -240,7 +240,7 @@
                 <span class="material-symbols-outlined title-icon">
                   task
                 </span>
-                <span id="double-click" ondblclick="handleDoubleClick()">יצירת קשר ראשוני, וקביעת מצגת</span>
+                <span id="double-click" ondblclick="handleDoubleClick()">יצירת קשר ראשוני</span>
               </div>
             </div>
 
@@ -280,7 +280,7 @@
             <div class="card__boxes--box__header">
               <div class="card__boxes--box__header--title">
                 <span class="material-symbols-outlined"> event </span>
-                <span>תעד פעילות להיסטוריה</span>
+                <span>תעד פעילות</span>
               </div>
               <div class="card__boxes--box__header--btns">
                 <div class="dynamic-btns">
