--- a/kanban.html
+++ b/kanban.html
@@ -261,7 +261,8 @@
                 <div class="kanban-title">מתוכנן</div>
                 <div class="kanban-note pink-border">
                   <div class="kanban-note-header">
-                    <div>
+                    <div class="kanban-note-header__title">
+                      <span class="material-symbols-outlined">task</span>
                       <span>משימה</span>
                     </div>
                     <span class="note-date">12-01-24</span>
@@ -276,9 +277,10 @@
                   </p>
                   <div class="kanban-note-header">
                     <span>210,000$</span>
-                    <span>משה, דוד, שלמה</span>
+                    <span>משה, דוד, שלמה<span class="material-symbols-outlined add-icon-small">add</span></span>
+
                   </div>
-                  <div class="kanban-icons">
+                  <div class=" kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color"
                       data-toggle="color-menu">palette</span>
 
