--- a/kanban.html
+++ b/kanban.html
@@ -285,6 +285,7 @@
                       data-toggle="color-menu">palette</span>
 
                     <div class="color-menu active">
+                      <span class="color-option gray-border default-border" data-color="gray"></span>
                       <span class="color-option pink-border" data-color="pink"></span>
                       <span class="color-option blue-border" data-color="blue"></span>
                       <span class="color-option yellow-border" data-color="yellow"></span>
