--- a/kanban.html
+++ b/kanban.html
@@ -280,7 +280,7 @@
                     <span>משה, דוד, שלמה<span class="material-symbols-outlined add-icon-small">add</span></span>
 
                   </div>
-                  <div class=" kanban-icons">
+                  <div class="kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color"
                       data-toggle="color-menu">palette</span>
 
@@ -292,7 +292,9 @@
                       <span class="color-option green-border" data-color="green"></span>
                     </div>
 
-                    <span class="material-symbols-outlined btn-default">person_add</span>
+                    <span class="material-symbols-outlined btn-default">attach_file</span>
+                    <span class="material-symbols-outlined btn-default">push_pin</span>
+                    <span class="material-symbols-outlined btn-default">print</span>
                   </div>
                 </div>
                 <div class="kanban-note yellow-border">
